--- a/package.json
+++ b/package.json
@@ -12,29 +12,35 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.3",
     "isbot": "^5.1.27",
     "lucide-react": "^0.522.0",
     "match-sorter": "^8.0.3",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "shadcn": "^2.9.0",
+    "sonner": "^2.0.6",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "tiny-invariant": "^1.3.3",
+    "toast": "^0.5.4",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
-    "@tailwindcss/vite": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^20",
+    "@types/node": "^20.19.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/sort-by": "^1.2.3",
-    "tailwindcss": "^4.1.10",
-    "tw-animate-css": "^1.3.4",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
