--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@types/js-cookie": "^3.0.6",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.3",
     "isbot": "^5.1.27",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.522.0",
     "match-sorter": "^8.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.5.3",
     "shadcn": "^2.9.0",
     "sonner": "^2.0.6",
@@ -35,6 +38,7 @@
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
